--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 nav {
-    position: absolute;
+    position: fixed;
     display: flex;
     width: 100%;
 }
@@ -31,7 +31,16 @@ nav {
     align-items: flex-start;
     font-weight: var(--font-bold);
     font-size: var(--text-xsm);
-    color: var(--light)
+    color: var(--light);
+    background-color:var(--transparent);
+}
+
+.menu-link {
+    color: var(--light);
+}
+
+.menu-link.active {
+    color: var(--active);
 }
 
 .menu li {
@@ -121,7 +130,7 @@ section {
     display: flex;
     width: 100%;
     justify-content: center;
-    padding: 30px;
+    padding: 24px 0 7px;
     font-weight: var(--font-bold);
     font-size: var(--text-xsm);
     color: var(--light)
