--- a/css/global.css
+++ b/css/global.css
@@ -4,7 +4,7 @@
     --text: #0D4D14;
     --buttonText: #6CB981;
     --buttonShadow: #6cb98121;
-    --transparent: #424f41e1;
+    --transparent: #424f41;
     --darkBackground: #324B29;
     --formField: #9FDEA9;
     --active: #00ff92;
