--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,10 @@
+/* Global variables and styles */
 :root {
     --light: #FFFFFF;
     --gray: #828282;
     --text: #0D4D14;
     --buttonText: #6CB981;
     --buttonShadow: #6cb98121;
-    --transparent: #424f41;
     --darkBackground: #324B29;
     --formField: #9FDEA9;
     --active: #00ff92;
